--- a/package.json
+++ b/package.json
@@ -10,22 +10,42 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "plasmo": "0.85.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@radix-ui/react-slot": "^1.0.2",
+    "ahooks": "^3.7.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.364.0",
+    "plasmo": "^0.85.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "@tanstack/react-table": "^8.15.3",
+    "@plasmohq/storage": "^1.9.3"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
-    "@types/chrome": "0.0.258",
-    "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "prettier": "3.2.4",
-    "typescript": "5.3.3"
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/chrome": "^0.0.258",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.4",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.3.3"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "storage",
+      "webRequest",
+      "webRequestBlocking",
+      "<all_urls>"
     ]
   }
 }
