--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
+    "@plasmohq/storage": "^1.9.3",
+    "@radix-ui/themes": "^3.0.2",
     "ahooks": "^3.7.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -21,8 +22,7 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "@tanstack/react-table": "^8.15.3",
-    "@plasmohq/storage": "^1.9.3"
+    "react-highlight-words": "^0.20.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
